--- a/docs/team/jeunhoe.adoc
+++ b/docs/team/jeunhoe.adoc
@@ -22,17 +22,7 @@ University of Singapore (NUS) and we created *Athletick* as part of a requiremen
 engineering module. We were tasked with morphing a desktop address book application with the constraint that it had
 to be a command line interface application. This project was completed over six weeks.
 
-Note the following symbols and formatting used in this document:
-
-|===
-
-| `training` | A grey highlight (mark-up) indicates that this is a command that can be input into the command line and executed by the application.
-
-| `[green]#TrainingManager#` | Green text with grey highlight indicates a component, class or object in the architecture of the application.
-
-| NOTE: | This symbol indicates important information.
-
-|===
+include::../DeveloperGuide.adoc[tag=symbol]
 
 == Summary of contributions
 This section contains a summary of my contributions to the project. This includes code, documentation and other helpful
@@ -64,7 +54,8 @@ typing which will save time.
 *Enhancement added:* I added the ability to monitor an athlete’s attendance rate.
 
 * What it does:
-** The `attendance`, `select`, `view attendance` and `calendar` commands allow a user to track their team’s attendance.
+** A built-in attendance tracker allows users to track their team’s attendance using the `attendance`, `select`, `view
+attendance` and `calendar` commands.
 
 * Justification:
 ** Coaches are concerned about their team’s overall attendance rate as it is a good indicator an
