Edit PPP and tagged symbol in DG

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -34,11 +34,12 @@ considerations for the implementation of Athletick's features.
 
 The intended audience of this document includes the developers and software testers of Athletick.
 
-Note the following symbols and formatting used in this document
 
+// tag::symbol[]
 
+Note the following symbols and formatting used in this document:
 
-NOTE:  This symbol indicates important information
+NOTE:  This symbol indicates important information.
 
 [horizontal]
 
@@ -46,6 +47,9 @@ NOTE:  This symbol indicates important information
 line and executed by the application.
 
 `[green]#component#`:: Green text with grey highlight indicates a component, class, object or method in the architecture of the application.
+
+// end::symbol[]
+
 //====
 
 === Design goals
