Add manual testing instructions for templates

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -386,6 +386,16 @@ For example, `a` to add a piece of text, arrow keys to adjust the position of th
 ** Pros: The user can accurately adjust the position of the text.
 ** Cons: Very hard to implement. Requires major work on the UI.
 
+===== Aspect: How to specify the position of text coordinates
+
+* **Alternative 1:** The user specifies where the top-left corner of the text should be.
+** Pros: Might be more useful if the user wants to place the text right after another piece of text.
+** Cons: User will be unsure where the text will end. Might need to use the `move` command afterwards to adjust the text position after seeing its length.
+* **Alternative 2(current choice):** The user specifies where the center of the text should be.
+** Pros: Easier to specify where the text will eventually be.
+For example, when the text should be at the center, the user simply specifies `x/0.5 y/0.5`, instead of doing a visual estimate of how the long text would be and specifying its top-left corner's coordinates.
+** Cons: New users might be more used to specifying the top-left corner's coordinates and think there is a bug in the product.
+
 // end::templates[]
 
 // tag::stats[]
@@ -805,9 +815,8 @@ Refer to the guide <<DevOps#, here>>.
 * wants to create memes for entertainment
 * prefers desktop apps over other types
 * prefers typing over mouse input
-* wants to participate in the meme culture by sharing memes
 
-*Value proposition*: manage memes faster than a typical mouse/GUI driven app
+*Value proposition*: manage and create memes faster than a typical mouse/GUI driven app
 
 [appendix]
 == User Stories
@@ -824,16 +833,14 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 |`* * *` |user |archive memes |I can stop seeing old memes
 |`* * *` |careless user |undo/redo any accidental deletion of memes |I can retrieve back my favourite memes
 |`* * *` |user |get hints on command syntax when i type |I don't have to memorize the command syntax
-|`* * *` |meme lover |easily share my memes to other platforms |I can send them in my chats
 |`* * *` |user |import memes |I can import memes my friends shared with me into my personal collection
 |`* * *` |user |export memes |I can backup the memes or share them with another user
 |`* * *` |user |view statistics of my meme usage |I know which memes are more liked/used
+|`* *` |meme lover |easily share my memes to other platforms |I can send them in my chats
 |`* *` |bored person |view random memes |I can kill time
 |`* *` |user |bookmark my favourite memes |I can find them quickly
 |`*` |person new to meme |get the reference to the meme I see for the first time |I can learn how to use the meme
 |=======================================================================
-
-_{More to be added}_
 
 [appendix]
 == Use Cases
@@ -841,20 +848,14 @@ _{More to be added}_
 (For all use cases below, the *System* is the `Weme` and the *Actor* is the `user`, unless specified otherwise)
 
 [discrete]
-=== Use case 1: Add template
+=== Use case 1: Add a template
 
 *MSS*
 
-1. User requests to open the template tab
-2. Weme opens the template tab
-3. User requests to create a template, using a base picture from the disk
-4. Weme creates the template
-5. User requests to edit the template
-6. Weme loads the template into the editing area
-7. User requests to add/move text boxes in the template
-8. Weme adds/moves text boxes in the template
-9. User requests to complete the edit session
-10. Weme successfully completes the edit session
+1. User requests to open the templates tab
+2. Weme opens the templates tab
+3. User requests to add a template and passes the path to an image on the disk
+4. Weme copies the image to its data directory and creates the template
 +
 Use case ends
 
@@ -866,52 +867,43 @@ Use case ends
 +
 Use case resumes at step 2
 
-* 5a. The given index is invalid
-+
-[none]
-** 5a1. Weme shows an error message
-+
-Use case resumes at step 2
-
-* 9a. User enters another command before completing the edit session
-+
-[none]
-** 9a1. Weme aborts the current edit session
-** 9a2. Weme executes the command just entered by the user
-
 [discrete]
-=== Use case 2: Create meme from template
+=== Use case 2: Creating a meme from a template
 
 *MSS*
 
-1. User requests to list meme templates
-2. Weme shows a list of meme templates
-3. User selects a template to create a meme
-4. Weme creates the meme from the selected template based on user input
-+
-Use case ends
+1. User requests to list templates
+2. Weme displays a list of templates
+3. User requests to use a template to create a meme
+4. Weme displays the template image for the user to add text
+5. User requests to add text to the template
+6. Weme adds text boxes in the template
+7. User requests to edit text in the template
+8. Weme edits the specified text
+9. User requests to delete text
+10. Weme deletes the specified text
+11. User requests to complete the creation session
+12. Weme successfully completes the creation session and saves the resultant meme
 
 *Extensions*
-
 [none]
-* 2a. The template list is empty
+* 2a. The list is empty.
 +
-Use case ends
+Use case ends.
 
-* 3a. The given index is invalid
-+
-[none]
-** 3a1. Weme shows an error message
-+
-Use case resumes at step 2
-
-* 4a. The given input is invalid
+* 3a. The given index is invalid.
 +
 [none]
-** 4a1. Weme shows an error message
+** Weme displays an error message.
 +
-Use case resumes at step 2
+Use case resumes at step 2.
 
+* 7a, 9a. The given index is invalid.
++
+[none]
+** Weme displays an error message.
++
+Use case resumes at step 4.
 
 [discrete]
 === Use case 3: Import meme
@@ -994,12 +986,10 @@ _{More to be added}_
 == Non Functional Requirements
 
 . Should work on any <<mainstream-os,mainstream OS>> as long as it has Java `11` or above installed.
-. Should be able to hold up to 1000 memes without a noticeable sluggishness in performance for typical usage.
+. Should be able to hold up to 500 memes without a noticeable sluggishness in performance for typical usage.
 . A user with above average typing speed for regular English text (i.e. not code, not system admin commands) should be able to accomplish most of the tasks faster using commands than using the mouse.
 . Should have a ui design that is intuitive enough for the user to use.
 
-
-_{More to be added}_
 
 [appendix]
 == Glossary
@@ -1008,14 +998,7 @@ _{More to be added}_
 Windows, Linux, Unix, OS-X
 
 [[meme-template]] Meme template::
-A picture with placeholders for text. A meme can be created by replacing the placeholders with text.
-
-[appendix]
-== Product Survey
-
-*Weme*
-
-_{TODO}_
+A meme-like picture with some of the text removed. The user can create a meme using a template by filling in the missing words.
 
 
 [appendix]
@@ -1031,13 +1014,13 @@ These instructions only provide a starting point for testers to work on; testers
 . Initial launch
 
 .. Download the jar file and copy into an empty folder
-.. Double-click the jar file +
-   Expected: Shows the GUI with a set of sample contacts. The window size may not be optimum.
+.. Run the jar file with `java -jar` command +
+   Expected: Shows the GUI in the memes tab with a set of sample memes. The window size may not be optimum.
 
 . Saving window preferences
 
 .. Resize the window to an optimum size. Move the window to a different location. Close the window.
-.. Re-launch the app by double-clicking the jar file. +
+.. Re-launch the app by running `java -jar` again. +
    Expected: The most recent window size and location is retained.
 
 . Unreferenced image files are removed
@@ -1121,10 +1104,79 @@ These instructions only provide a starting point for testers to work on; testers
 .. Test case: `unarchive 0` +
    Expected: No meme is unarchived. Error details shown in the status message state the command syntax is invalid.
 
+=== Adding a template
+
+. Adding a template in the templates tab
+
+.. Prerequisites: Weme is in the templates tab. An image file is on the hard disk.
+.. Test case: `add p/PATH_TO_IMAGE_ON_DISK n/A great template` +
+   Expected: The template is added to the templates list. The view is updated to include this new template. The status message states the add was successful.
+.. Test case: `add p/INVALID_PATH_TO_FILE_ON_DISK n/A great template` +
+   Expected: No template is added. Error details shown in the status message state the file must be an existing image file.
+.. Test case: `add p/PATH_TO_IMAGE_ON_DISK` +
+   Expected: No template is added. Error details shown in the status message state the command syntax is invalid.
+.. Other incorrect add commands to try: `add`, `add n/blah` (no path is given) +
+   Expected: Similar to previous.
+
+=== Editing a template
+
+. Editing a template in the templates tab.
+
+.. Prerequisites: Weme is in the templates tab. At least one template in the list.
+.. Test case: `edit 1 n/Another name` +
+   Expected: The first template in the list is edited to have the new name. The view is updated to reflect the change. The status message states the edit was successful.
+.. Test case: `edit 0` +
+   Expected: No template is edited. Error details shown in the status message state the command syntax is invalid.
+.. Other incorrect edit commands to try: `edit`, edit q/` +
+   Expected: Similar to previous.
+
+=== Adding text to a template during meme creation
+
+. Adding text to a template during meme creation.
+
+.. Prerequisites: Weme is in the create tab. A template has been chosen using the `use` command from the templates tab.
+The template is displayed in the create tab.
+.. Test case: `add sleep x/0.75 y/0.25` +
+   Expected: Text "sleep" is added to the image. Its center is placed 75% of the image width from the left border and 25% of the image height from the top border.
+             The list of text is updated to include this new entry.
+.. Test case: `add code x/0.75 y/0.75 c/brown S/bold` +
+   Expected: Bold and brown text "code" is added to the image. Its center is placed 75% of the image width from the left border and 75% of the image height from the top border.
+             The list of text is updated to include this new entry.
+.. Test case: `add x/0.5 y/0.5` +
+   Expected: No text is added. Error details shown in the status message state the command syntax is invalid.
+.. Other incorrect add commands to try: `add`, `add text` +
+   Expected: Similar to previous
+
+=== Moving text during meme creation
+
+. Moving text to a template during meme creation.
+
+.. Prerequisites: Weme is in the create tab. A template has been chosen using the `use` command from the templates tab.
+The template is displayed in the create tab. At least one piece of text has been added to the template.
+.. Test case: `move 1 x/0.1 y/-0.1` +
+   Expected: Text at index 1 is moved 10% of the image width to the right and 10% of the image height upwards.
+   The list of text is updated to reflect its new position.
+   The command fails if the text would be moved out of image boundaries.
+.. Test case: `move 1` and then use arrow keys to move the text +
+   Expected: Text at index 1 is moved based on the directions of the arrow keys pressed.
+   The list of text is updated to reflect its new position.
+   The move fails if the text would be moved out of image boundaries.
+.. Test case: `move x/0.2` +
+   Expected: No text is moved. Error details shown in the status message state the command syntax is invalid.
+.. Other incorrect move commands to try: `move`, `move blah` +
+   Expected: Similar to previous
+
+=== Completing meme creation
+
+. Completing a meme creation session.
+
+.. Prerequisites: Weme is in the create tab. A template has been chosen using the `use` command from the templates tab.
+The template is displayed in the create tab.
+.. Test case: `create d/My great meme` +
+   Expected: A new meme is created and added to the memes list, with description "My great meme". The UI goes into view mode, as if triggered by a `view` command, displaying the newly created meme.
+
 === Saving data
 
 . Dealing with missing/corrupted data files
 
 .. _{explain how to simulate a missing/corrupted file and the expected behavior}_
-
-_{ more test cases ... }_
